// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar matches snapshot with balance 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "backgroundColor": "rgba(238,238,239,1.00)",
      "borderBottomLeftRadius": "5px",
      "borderBottomRightRadius": "5px",
      "borderTopLeftRadius": "5px",
      "borderTopRightRadius": "5px",
      "marginBottom": "15px",
      "paddingBottom": "15px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "15px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitJustifyContent": "space-between",
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
      }
    }
  >
    <div
      aria-disabled={true}
      className="css-view-1dbjc4n"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "MozTransitionProperty": "opacity",
          "MozUserSelect": "none",
          "WebkitTransitionDuration": "0.15s",
          "WebkitTransitionProperty": "opacity",
          "WebkitUserSelect": "none",
          "backgroundColor": "rgba(0,0,0,0.00)",
          "msUserSelect": "none",
          "transitionDuration": "0.15s",
          "transitionProperty": "opacity",
          "userSelect": "none",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomColor": "rgba(112,112,112,1.00)",
            "borderBottomLeftRadius": "17px",
            "borderBottomRightRadius": "17px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(112,112,112,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(112,112,112,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(112,112,112,1.00)",
            "borderTopLeftRadius": "17px",
            "borderTopRightRadius": "17px",
            "borderTopWidth": "1px",
            "height": "34px",
            "width": "34px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "flexBasis": "auto",
              "height": "34px",
              "msFlexPreferredSize": "auto",
              "overflowX": "hidden",
              "overflowY": "hidden",
              "width": "34px",
              "zIndex": 0,
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.00)",
                "backgroundPosition": "center",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "bottom": "0px",
                "height": "100%",
                "left": "0px",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(85,85,85,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "30px",
            "textAlign": "right",
          }
        }
      >
        0.00
      </div>
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(85,85,85,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "18px",
            "textAlign": "right",
          }
        }
      >
        G$
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar matches snapshot without balance 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "backgroundColor": "rgba(238,238,239,1.00)",
      "borderBottomLeftRadius": "5px",
      "borderBottomRightRadius": "5px",
      "borderTopLeftRadius": "5px",
      "borderTopRightRadius": "5px",
      "marginBottom": "15px",
      "paddingBottom": "15px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "15px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitJustifyContent": "space-between",
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
      }
    }
  >
    <div
      aria-disabled={true}
      className="css-view-1dbjc4n"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "MozTransitionProperty": "opacity",
          "MozUserSelect": "none",
          "WebkitTransitionDuration": "0.15s",
          "WebkitTransitionProperty": "opacity",
          "WebkitUserSelect": "none",
          "backgroundColor": "rgba(0,0,0,0.00)",
          "msUserSelect": "none",
          "transitionDuration": "0.15s",
          "transitionProperty": "opacity",
          "userSelect": "none",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomColor": "rgba(112,112,112,1.00)",
            "borderBottomLeftRadius": "17px",
            "borderBottomRightRadius": "17px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(112,112,112,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(112,112,112,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(112,112,112,1.00)",
            "borderTopLeftRadius": "17px",
            "borderTopRightRadius": "17px",
            "borderTopWidth": "1px",
            "height": "34px",
            "width": "34px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "flexBasis": "auto",
              "height": "34px",
              "msFlexPreferredSize": "auto",
              "overflowX": "hidden",
              "overflowY": "hidden",
              "width": "34px",
              "zIndex": 0,
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.00)",
                "backgroundPosition": "center",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "bottom": "0px",
                "height": "100%",
                "left": "0px",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar should render the children component 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "backgroundColor": "rgba(238,238,239,1.00)",
      "borderBottomLeftRadius": "5px",
      "borderBottomRightRadius": "5px",
      "borderTopLeftRadius": "5px",
      "borderTopRightRadius": "5px",
      "marginBottom": "15px",
      "paddingBottom": "15px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "15px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitJustifyContent": "space-between",
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
      }
    }
  >
    <div
      aria-disabled={true}
      className="css-view-1dbjc4n"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "MozTransitionProperty": "opacity",
          "MozUserSelect": "none",
          "WebkitTransitionDuration": "0.15s",
          "WebkitTransitionProperty": "opacity",
          "WebkitUserSelect": "none",
          "backgroundColor": "rgba(0,0,0,0.00)",
          "msUserSelect": "none",
          "transitionDuration": "0.15s",
          "transitionProperty": "opacity",
          "userSelect": "none",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomColor": "rgba(112,112,112,1.00)",
            "borderBottomLeftRadius": "17px",
            "borderBottomRightRadius": "17px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(112,112,112,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(112,112,112,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(112,112,112,1.00)",
            "borderTopLeftRadius": "17px",
            "borderTopRightRadius": "17px",
            "borderTopWidth": "1px",
            "height": "34px",
            "width": "34px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "flexBasis": "auto",
              "height": "34px",
              "msFlexPreferredSize": "auto",
              "overflowX": "hidden",
              "overflowY": "hidden",
              "width": "34px",
              "zIndex": 0,
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.00)",
                "backgroundPosition": "center",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "bottom": "0px",
                "height": "100%",
                "left": "0px",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
        style={
          Object {
            "color": "rgba(0,0,0,1.00)",
            "direction": "ltr",
            "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "textAlign": "left",
          }
        }
      >
        Children element
      </div>
    </div>
  </div>
</div>
`;
